--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ body{
     padding: 30px 35px;
     box-shadow: 0 10px 20px rgba(0, 0 , 0, 0.2);
 }
+.container.disable :where(.editor-panel, .reset-filter,.save-img,.css-panel) {
+    opacity: 0.6;
+    pointer-events: none;
+}
 .container h2 {
     font-size: 25px;
     font-weight: 600;
