--- a/style.css
+++ b/style.css
@@ -108,7 +108,6 @@ body{
     width: 100%;
     height: 100%;
     object-fit:contain;
-
 }
 .controls button{
     font-size: 14px;
@@ -166,7 +165,11 @@ body{
     width: 750px;
     height: 100px;
     margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 5px;
+    color: #fff;
     border: 1px solid #ccc;
-    background: #fff;
-}
+    background: #0b0b0b;
+} 
