--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ body{
 
 .css-panel{
     width: 750px;
-    height: 100px;
+    height: 70px;
     margin: 10px;
     display: flex;
     justify-content: center;
@@ -172,4 +172,5 @@ body{
     color: #fff;
     border: 1px solid #ccc;
     background: #0b0b0b;
+    font-size: large;
 } 
